--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
 
         <div class="footer-div copyright">
-            <p> web design <a href="https://shakexsempe.netlify.app/">shakex sempe</a></p>
+            <p> web design <a target="_blank" href="https://shakexsempe.netlify.app/">shakex sempe</a></p>
             <p id="date"></p>
         </div>
     </footer>
