--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="flex-container">
                             </div>
                             <input class="flex-input" type="text" name="surname-name" id="surname-name" title="Surname"
-                            placeholder="Last Name" minlength="2" required>
+                            placeholder="Surname" minlength="2" required>
 
                     </div>
 
