--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
                             placeholder="First Name" minlength="2" required>
                         <div class="flex-container">
                             </div>
-                            <input class="flex-input" type="text" name="surname-name" id="surname-name" title="Surname"
+                            <input class="flex-input" type="text" name="Surname" id="surname" title="Surname"
                             placeholder="Surname" minlength="2" required>
 
                     </div>
 
                     <div class="input-div">
                         <label for="partner-name">Plus one / Partner's name </label>
-                        <input type="text" name="partner-name" id="partner-name" title="Partner's Name"
+                        <input type="text" name="Partner-name" id="partner-name" title="Partner's Name"
                             placeholder="Partner's name" minlength="2">
                     </div>
 
                     <div class="input-div">
                         <label for="tel">phone number </label>
-                        <input type="tel" name="tel" id="tel" title="Phone Number" placeholder="Your Phone Number"
+                        <input type="tel" name="Tel" id="tel" title="Phone Number" placeholder="Your Phone Number"
                             minlength="10" required>
                     </div>
 
