--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <!-- PRELOAD ITEMS -->
     <!-- <link rel="preload" href="img/hero.webp" as="image" fetchpriority="high"> -->
-    <link rel="preload" href="img/hero-1.JPG" as="image" fetchpriority="high">
-    <link rel="preload" href="img/hero-3.jpg" as="image" fetchpriority="high">
+    <!-- <link rel="preload" href="img/hero-1.JPG" as="image" fetchpriority="high"> -->
+    <link rel="preload" href="img/pa-bike.jpg" as="image" fetchpriority="high">
 
 </head>
 
@@ -81,17 +81,10 @@
     
             <header id="hero" class="hero">
     
-                <figure class="hero-img hero-img-1">
+                <figure class="hero-img">
                     <picture >
                         <!-- <source srcset="img/hero-3.webp" width="650" height="487" alt="Arthur Sempe"> -->
-                        <img src="img/hero-3.jpg" width="650" height="487" alt="Arthur Sempe">
-                    </picture>
-                </figure>
-
-                <figure class="hero-img hero-img-2">
-                    <picture >
-                        <!-- <source srcset="img/pa-mobile.webp" width="533" height="434" alt="motorcyclist"> -->
-                        <img src="img/pa-mobile.JPG" width="533" height="434" alt="Arthur Sempe">
+                        <img src="img/pa-bike.jpg" width="650" height="450" alt="Arthur Sempe">
                     </picture>
                 </figure>
 
