--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- PRELOAD ITEMS -->
-    <!-- <link rel="preload" href="img/hero.webp" as="image" fetchpriority="high"> -->
-    <!-- <link rel="preload" href="img/hero-1.JPG" as="image" fetchpriority="high"> -->
+    <link rel="preload" href="img/pa-bike.webp" as="image" fetchpriority="high">
     <link rel="preload" href="img/pa-bike.jpg" as="image" fetchpriority="high">
 
 </head>
@@ -83,7 +82,7 @@
     
                 <figure class="hero-img">
                     <picture >
-                        <!-- <source srcset="img/hero-3.webp" width="650" height="487" alt="Arthur Sempe"> -->
+                        <source srcset="img/pa-bike.webp" width="650" height="450" alt="Arthur Sempe">
                         <img src="img/pa-bike.jpg" width="650" height="450" alt="Arthur Sempe">
                     </picture>
                 </figure>
