--- a/pages/about.html
+++ b/pages/about.html
@@ -83,7 +83,7 @@
     
                 <figure class="hero-img">
                     <picture >
-                        <!-- <source srcset="img/hero-3.webp" width="650" height="487" alt="Arthur Sempe"> -->
+                        <source srcset="../img/pa-bike.webp" width="650" height="450" alt="Arthur Sempe">
                         <img src="../img/pa-bike.jpg" width="650" height="450" alt="Arthur Sempe">
                     </picture>
                 </figure>
