--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                     <div class="input-div">
                         <label for="email">email address </label>
-                        <input type="email" name="email" title="Email Address" id="email" placeholder="Your Email Address"
+                        <input type="email" name="Email" title="Email Address" id="email" placeholder="Your Email Address"
                             required>
                     </div>
 
@@ -228,7 +228,7 @@
         </div>
     </footer>
 
-        <a href="#" class="top-btn"></a>
+        <a href="#" title="Home" class="top-btn"></a>
 
     <!-- JAVASCRIPT -->
     <script src="js/app.js"></script>
