nav brand nav-link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <nav id="nav">
         <div class="brand">
-            <a title="home" href="#"><span>T.A</span> SEMPE
+            <a class="nav-link" title="home" href="#"><span>T.A</span> SEMPE
             </a>
         </div>
 
