--- a/pages/about.html
+++ b/pages/about.html
@@ -160,27 +160,26 @@
             <h2>contact info</h2>
 
             <div class="contact-details contact-details-1">
-                <ul>
-                    <li>
-                        <img src="../icons/solid/icons8-user-48-light.png" class="icon" height="48" width="48" alt="user icon">
-                        <p>Nhlanhla Sempe</p>
-                    </li>
-                </ul>
+                <div class="contact-name">
+                    <p>Nhlanhla Sempe</p>
+                    <img src="../icons/solid/icons8-user-48-light.png" class="icon" height="48" width="48" alt="user icon">
+                </div>
+
                 <ul>
                     <li>
                         <p><img src="../icons/outline/icons8-whatsapp-24-light.png" class="icon" height="24" width="24" alt="user icon">whatsApp :</p>
                         <a href="https://wa.me/+27768162615">+27768162615</a>
                     </li>
                 </ul>
+
             </div>
 
             <div class="contact-details contact-details-2">
-                <ul>
-                    <li>
-                        <img src="../icons/solid/icons8-user-48-light.png" class="icon" height="24" width="24" alt="user icon">
-                        <p>Tinyiko Sempe</p>
-                    </li>
-                </ul>
+                <div class="contact-name">
+                    <p>Tinyiko Sempe</p>
+                    <img src="../icons/solid/icons8-user-48-light.png" class="icon" height="48" width="48" alt="user icon">
+                </div>
+
                 <ul>
                     <li>
                         <p><img src="../icons/outline/icons8-whatsapp-24-light.png" class="icon" height="24" width="24" alt="user icon">whatsApp :</p>
