--- a/pages/about.html
+++ b/pages/about.html
@@ -138,8 +138,16 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="../img/pa-bike2.jpg" loading="lazy" width="500" height="375" alt="TA Sempe">
-                    <img src="../img/pa-bibo.jpg" loading="lazy" width="500" height="375" alt="TA Sempe">
+                    <picture>
+                        <source srcset="../img/pa-bike2.webp" width="500" height="375" alt="TA Sempe" >
+                        <img src="../img/pa-bike2.jpg" loading="lazy" width="500" height="375" alt="TA Sempe">
+                    </picture> 
+
+                    <picture>
+                        <source srcset="../img/pa-bibo.webp" width="500" height="375" alt="TA Sempe" >
+                        <img src="../img/pa-bibo.jpg" loading="lazy" width="500" height="375" alt="TA Sempe">
+                    </picture> 
+
                     <img src="../img/pa-tumi.jpg" loading="lazy" width="550" height="366" alt="TA Sempe">
                     <img src="../img/pa-tuna.jpg" loading="lazy" width="550" height="412" alt="TA Sempe">
                 </div>
